--- a/lab2/R Tutorial-Exercises.Rmd
+++ b/lab2/R Tutorial-Exercises.Rmd
@@ -218,10 +218,10 @@ car_color <- c('Red', 'Blue', 'Red',
 year <- c(2001, 2011, 2013, 2012, 2021, 2021)
 # write your answer here:
 car_data <- data.frame(
-        car_model = car_models,
-        car_type = car_type,
-        car_color = car_color,
-        year = year
+  car_model = car_models,
+  car_type = car_type,
+  car_color = car_color,
+  year = year
 )
 print(car_data)
 ```
@@ -322,13 +322,20 @@ The average is 885.5
 
 
 Fill the blank in the code, then delete "eval=FALSE, message=TRUE" to run.
-```{r eval=FALSE, message=TRUE}
+```{r}
 Fibonacci <- function(n) {
-  F = c(1, 1)
+  F <- c(1, 1)
   # write your answer here
-}
+  if (n <= 2) {
+    return(F[1:n])
+  } else {
+    for (i in 3:n) {
+      next_term <- F[i - 1] + F[i - 2]
+      F <- c(F, next_term)
+    }
+  }
 
-af = # write your answer here
+  af <- mean(F) # write your answer here
   cat(paste('The first', n, 'Fibonacci numbers are:'), '\n', F[1:n], '\n', paste('the average is', af))
 }
 Fibonacci(20)
