--- a/lab2/R Tutorial-Exercises.Rmd
+++ b/lab2/R Tutorial-Exercises.Rmd
@@ -160,7 +160,7 @@ print(dim(result))
 $\color{red}{\text{In class exercise}}$
 ```{r}
 # Q1: create array with dim = c(2,3,2) and print the result
-arr <- array(0:12, dim = c(2, 3, 2))
+arr <- array(c(vector1, vector2), dim = c(2, 3, 2))
 print(arr)
 # Q2: Print the second row of the second matrix of the array.
 print(arr[2, , 2])
