--- a/lab1/Lab1-exercises.Rmd
+++ b/lab1/Lab1-exercises.Rmd
@@ -18,6 +18,12 @@ x <- c(11, 10, 5, 9, 14, 12, 18, 2, 17, 9, 1, 7, 1, 15, 16, 7, 16, 12, 13, 3, 8,
 
 ```{r}
 # Write your answer here
+cond <- 1:length(x) %% 2 == 0
+x[cond] <- x[cond] + 3
+# add 3 to just the even index elements
+print(x)
+# sqrt
+print(sqrt(x))
 ```
 
 Q2. Given x = [3 15 9 12 -1 -12 9 6 1], provide the command that will  
