--- a/lab1/lab1.Rmd
+++ b/lab1/lab1.Rmd
@@ -52,10 +52,12 @@ x <- raw
 x[x %% 2 == 0] <- x[x %% 2 == 0] * 5
 print(x)
 
+# extract the values of x that are greater than 10 into a vector called y
 x <- raw
 y <- x[x > 10]
 print(y)
 
+# Find the index position of elements in x which are larger than 4
 x <- raw
 indices <- which(x > 4)
 print(indices)
