--- a/lab5/lab5.Rmd
+++ b/lab5/lab5.Rmd
@@ -321,5 +321,16 @@ p <- ggplot(data = mtcars,
   stat_smooth(method = lm, formula = y~x, col = "red", cex = 1)
 
 # write your answers here
+lm_eqn <- function(df, yvar, xvar){
+    formula_str <- paste(yvar, " ~ ", xvar)
+    m <- lm(formula_str, data=df);
+    eq <- substitute(italic(y) == a + b %.% italic(x)*","~~italic(r)^2~"="~r2,
+         list(a = format(unname(coef(m)[1]), digits = 2),
+              b = format(unname(coef(m)[2]), digits = 2),
+             r2 = format(summary(m)$r.squared, digits = 3)))
+    as.character(as.expression(eq));
+}
+
+p + geom_text(x = 300, y = 30, label = lm_eqn(mtcars, "mpg", "hp"), parse = TRUE)
 
 ```
