--- a/lab5/lab5.Rmd
+++ b/lab5/lab5.Rmd
@@ -324,7 +324,7 @@ p <- ggplot(data = mtcars,
 lm_eqn <- function(df, yvar, xvar){
     formula_str <- paste(yvar, " ~ ", xvar)
     m <- lm(formula_str, data=df);
-    eq <- substitute(italic(y) == a + b %.% italic(x)*","~~italic(r)^2~"="~r2,
+    eq <- substitute(italic(y) == a + (b) %.% italic(x)*","~~italic(r)^2~"="~r2,
          list(a = format(unname(coef(m)[1]), digits = 2),
               b = format(unname(coef(m)[2]), digits = 2),
              r2 = format(summary(m)$r.squared, digits = 3)))
